# training_toolbox

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  api.py  cli.py  colour.ipynb  comfy.py  gen_images.ipynb  install-requirements.sh  install_requirements.sh  latent_inspector.ipynb  lc.py  lora_inspector.ipynb  package-lock.json  package.json  pyproject.toml  scrape_config.example.json  tag-version-control.py  ui.py
ComfyAutomation/: artist_experiment.ipynb  automatic_artist_to_filename.ipynb  comfy.py  comfy_load.ipynb  comfy_mass_analysis.ipynb  comfy_mass_analysis.py  requirements.txt
DuplicateInspector/: FindDuplicatesCupy.py  ImageClustering.py  InspectDuplicates.ipynb
captioner/: collate_captions.py  make_embeddings.py  process_captions.py  requirements.txt
config/: config.example.yml
golang/: Makefile  go.mod  go.sum  sqlc.yaml
lib/: config.py  database.py  ffmpeg_frames.py  metadata.py  prompt_parser.py
modules/: metadata.py  prompt_parser.py  sd_api.py  stable_diffusion_webui.py  util.py
not_cleaned/: scrape.py
numerical/: latent_inspector.ipynb
scrape/: downloadArchive.js  getExistingFiles.js  index.js  loadChromeCookies.js  login.js  parse_fa_comments.js  scrape.js  scrape_desuarchive.js  scrape_furaffinity.js  scrape_pdf.ipynb  tokenize_text.ipynb  tokenize_text.py
src/: requirements.txt
tag-versions/: tag-version-control.py
tagging/: batch_tagger.py  comfy_mass_analysis.py  ffmpeg_frames.py  ui.py  wsl_utils.py
tests/: test_imageboard_db_and_router.py  test_local_prompts_router.py  test_lora_info_client.py  (+1 more)
tools/: comfy.py  (+4 more)
(+146 files in other folders)
